<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Content Container-->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signin_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_alignTop="@+id/orBreak"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:id="@+id/tfEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75sp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/tfEmail"
        android:layout_alignStart="@+id/tfEmail" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:text="@string/message"/>

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/common_signin_button_text"
        android:layout_below="@+id/tvRegister"
        android:layout_alignStart="@+id/google_signin_button"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/orBreak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orBreak"
        android:textAlignment="center"
        android:layout_below="@+id/bSignIn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:textSize="15sp"/>
</RelativeLayout>