<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="project.senior.android.com.meetingtime.RegisterActivity">


    <EditText
        android:id="@+id/tfName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tfEmail"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/tfEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_below="@+id/tfName"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:layout_alignStart="@+id/tfPassword" />

    <EditText
        android:id="@+id/tfPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/tfEmail"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tfPassword"
        android:layout_marginBottom="44dp"
        android:textAlignment="center"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvSignin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/signInMessage"
        android:layout_above="@+id/bRegister"
        android:layout_alignStart="@+id/tfPassword"
        android:layout_marginBottom="55dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/tfPassConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:layout_below="@+id/tfPassword"
        android:layout_alignStart="@+id/tfPassword"
        android:layout_alignEnd="@+id/tfPassword"
        android:textAlignment="center"/>
</RelativeLayout>
